# genetic_enroll

./: .gitignore  README.md  genetic_enroll.ipynb  paths.py  pref_generator.py  pyproject.toml  subject_assignment_generator.py
data/assignments/: single_subject_x2.csv  subject_assignment_1.csv  subject_assignment_2.csv  subject_assignment_3.csv
data/preferences/: preferences_1.csv  preferences_2.csv  preferences_3.csv  prefs_1.csv
data/schedules/: schedule_1.csv  schedule_3.csv  single_subject_x2.csv
enroll_back/: controller.py  service.py  test_service.py
enroll_web/: package-lock.json  package.json
enroll_web/public/csv/: schedule_2.csv
enroll_web/src/app/: global_state.tsx  globals.css  layout.tsx  page.tsx
enroll_web/src/app/Timetable/: Timetable.tsx
enroll_web/src/app/Timetable/components/: TimetableActionButton.tsx  TimetableConsts.tsx  TimetableEditingForm.tsx  TimetableFormInput.tsx  TimetableGrid.tsx  TimetableHeader.tsx  TimetableLessonCard.tsx  TimetableLessonCell.tsx
enroll_web/src/app/Timetable/interfaces/: Lesson.tsx
enroll_web/src/app/api/csv-list/: route.tsx
enroll_web/src/app/api/process-csv/: route.tsx
enroll_web/src/app/components/AlgorithmResult/: AlgorithmResult.tsx  AlgorithmScoreResults.tsx  AlgorithmStatus.tsx  (+1 more)
enroll_web/src/app/styles/: timetable.css
enroll_web/src/app/timetable/: page.tsx
enroll_web/src/app/utils/: BackendController.ts  ContextManager.tsx  FileManager.tsx  TimetableParser.ts
notebooks/: genetic_enroll.ipynb  pref_analysis.ipynb
scripts/: pref_generator.py  subject_assignment_generator.py
(+56 files in other folders)
