[project]
name = "genetic-enroll"
version = "1.0.0"
description = ""
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "ipykernel",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "seaborn",
    "ray[default]==2.44",
    "ipywidgets",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff"
]

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]
